# 9_evaluation_selection

./: .gitignore  README.md  pyproject.toml
src/9_evaluation_selection/: data_reader.py  pipeline.py  train.py
