[tool.poetry]
name = "9_evaluation_selection"
version = "0.1.0"
description = ""
authors = ["ml_user <ml_user@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
path = "^16.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
