[tool.poetry]
name = "9_evaluation_selection"
version = "0.1.0"
description = ""
authors = ["ml_user <ml_user@example.com>"]

[tool.poetry.scripts]
train = "9_evaluation_selection.train:train"
save_result = "9_evaluation_selection.train:save_competiotion_results"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
path = "^16.4.0"
pandas = "^1.4.2"
mlflow = "^1.25.1"
scikit-learn = "^1.0.2"
dump = "^0.0.5"
pipeline = "^0.1"
StandardScaler = "^0.5"
load = "^2020.12.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
